# fluid-sim

./: .gitignore  Cargo.toml  index.html
.github/workflows/: main.yml
src/: lib.rs  main.rs  shader.wgsl
