[package]
name = "fluid-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.12", features = [ "derive" ] }
log = "0.4"
rand = "0.8"
rand_distr = "0.4"
winit = "0.28"
wgpu = "0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
]}
